<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿no tienes cuenta?, </string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="text_button_join">Unete</string>
    <string name="toolbar_titel_createaccount">Crear cuenta</string>
    <string name="username_card">Uriel Ramirez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 dias</string>
    <string name="likenumbercard_card">10 me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Peril</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_word_detail">Me gusta</string>
    <string name="titleimage_detail">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ligula erat, iaculis eleifend diam a, fermentum consequat mauris. Vivamus semper dolor ut hendrerit fringilla. Duis venenatis sodales finibus. Fusce nisi eros, sodales nec congue quis, ullamcorper sit amet arcu. Donec ornare, erat a sagittis varius, lacus turpis elementum ipsum, vitae fringilla ipsum dolor et orci. Aliquam in accumsan ipsum, id pretium diam. Vestibulum et vulputate augue.</string>
    <string name="transitionname_picture">transitionNamePicture</string>
    <string name="login_error">Ocurrio un Error: </string>
    <string name="hint_title">Titulo</string>
    <string name="hint_description">Descripción</string>
    <string name="create_post">crear post</string>
    <string name="facebook_app_id">2064616373751106</string>
    <string name="fb_login_protocol_scheme">fb2064616373751106</string>
    <string name="menu_sign_out">Cerrar sesión</string>
    <string name="menu_about">Acerca de</string>

</resources>
